# clashbot

./: Cargo.toml
api/: Cargo.toml
api/src/: clan.rs  client.rs  error.rs  lib.rs  player.rs  war.rs
api/src/clan/: impls.rs
api/src/player/: impls.rs  tests.rs
api/src/war/: impls.rs  tests.rs
bot/: Cargo.toml
bot/src/: bot.rs  data.rs  main.rs  store.rs
bot/src/bot/: api.rs
bot/src/store/: files.rs  mongo.rs
