[package]
name = "clashbot"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clashofclans-api = { version = "0.0.0", path = "../api" }
directories = "4.0"
indicatif = { version = "0.17.0-rc.11", features = ["improved_unicode"] }
mongodb = { version = "2.2", default-features = false, features = [
    "sync",
    "zstd-compression",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.14", features = ["easy"] }
# tracing = "0.1"
